tests/ui/fails.rs
use ratatui_macros::constraints;

fn test() {
  constraints![,];
}
